* xxx
  - Always serialize required fields
  - Add defs_by_name/0 in generated structures for messages
  - Add syntax/0 in generated structures for messages
  - Add Protox.Message.merge/2 to merge two messages of the same type

* 0.19.1
  - Fix warning about duplicate keys (thanks to https://github.com/ananthakumaran)

* 0.19.0
  - CamelCase for all generated modules (fixes https://github.com/EasyMile/protox/issues/3)

* 0.18.0
  - Allow ability to construct file names at compile time (thanks to https://github.com/ananthakumaran)

* 0.17.0
  - Add path: option to specify import path (thanks to https://github.com/mathsaey)

* 0.16.2
  - Fix generation of typespecs for when there are more than one required field

* 0.16.1
  - Change base name for unknown fields from '__unknown_fields__' to '__uf__'

* 0.16.0
  - Fix handling of +/-infinity and NaN when encoding/decoding floats
  - Move RandomInit to tests

* 0.15.2
  - Fix typespecs for enum constants accessors

* 0.15.1
  - Fix typespecs for unknown and required fields accessors

* 0.15.0
  - Use 0.0 as default value for floats and doubles

* 0.14.0
  - Development now takes place at https://github.com/EasyMile/protox
  - Move conformance test escript to https://github.com/EasyMile/protox-conformance
  - Remove benchmarks escripts

* 0.13.0
  - Typespecs for generated encoder
  - Bring Varint into Protox
  - Fix decoding of booleans encoded with a varint which is not 0 or 1

* 0.12.1
  - Fix handling of unset members in map entries

* 0.12.0
  - ~2x speed improvement when encoding

* 0.11.1
  - It's now possible to clear unknown fields

* 0.11.0
  - Encode unknown fields

* 0.10.0
  - Update deps (dialyxir, excoveralls, hackney)

* 0.9.0
  - Keep unknown fields when decoding

* 0.8.0
  - Raise an error when decoding and when required fields are missing

* 0.7.1
  - Fix encoding of varint to match C++ version
  - Fix encoding of enums to match C++ version

* 0.7.0
  - Read definitions from files or binaries