@@ -3,6 +3,7 @@
   - Add defs_by_name/0 in generated structures for messages
   - Add syntax/0 in generated structures for messages
   - Add Protox.Message.merge/2 to merge two messages of the same type
+  - [Breaking change] proto2: use nil for unset fields
 
 * 0.19.1
   - Fix warning about duplicate keys (thanks to https://github.com/ananthakumaran)
